--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -52,6 +52,15 @@ jobs:
           curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip ${{ env.BUILD_WRAPPER_DOWNLOAD_URL }}
           unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
           echo "$HOME/.sonar/build-wrapper-linux-x86" >> $GITHUB_PATH
+      - name: Debug
+        run: |
+          nvidia-smi
+          nvcc -V
+      - name: Build without Sonar first to see what happens
+        run: |
+          mkdir build
+          cmake -S . -B build
+          make -C build
       - name: Run build-wrapper
         run: |
           mkdir build
